<resources>
    <string name="app_name">SafeX</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Trusted Person List</string>
    <string name="menu_slideshow">Alert</string>
    <string name="menu_tools"></string>
    <string name="menu_share">Logout</string>
    <string name="menu_send">Live Tracking</string>
    <string name="title_activity_menu_drawer">MenuDrawer</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="title_activity_nav_drawer_main">NavDrawerMain</string>


    <string name="google_map_api">oy9bZszAQmInTB0zpwgZ5yTkqxeXU2A</string>
    <string name="title_activity_maps">GoogleMapsGooglePlaces</string>
    <string name="title_activity_live_tracking_fragment1">Map</string>

</resources>
