<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.raj.safex.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tp_list"
        android:name="com.raj.safex.ui.trustedpersonlist.TrustedPersonListFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/trusted_person_list" />

    <fragment
        android:id="@+id/nav_alert"
        android:name="com.raj.safex.ui.alert.AlertFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/alert" />

    <fragment
        android:id="@+id/nav_live_tracking"
        android:name="com.raj.safex.ui.livetracking.LiveTrackingFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/live_tracking" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.raj.safex.ui.logout.logOutFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/logout" />


</navigation>